# webcrawler

./: .breakpoints  README.md  extra.py  mail.json  pyproject.toml  scraper.py  ui.py  user_system.py
templates/: base.html  connect.html  failed.html  main.html  manager_page.html  show_history.html  user.html  user_page.html  view_history.html  welcome.html  ‏‏‫login.html
